--- a/force-app/main/default/classes/TaskManagementController.cls
+++ b/force-app/main/default/classes/TaskManagementController.cls
@@ -15,4 +15,23 @@ public without sharing class TaskManagementController {
             }
         }
     }
+
+    @AuraEnabled
+    public static Task__c createTask(Task__c task){
+        insert task;
+        return task;
+    }
+
+    @AuraEnabled
+    public static Task__c updateTask(Task__c task){
+        update task;
+        return task;
+    }
+
+    @AuraEnabled
+    public static void deleteTask(Id recordid){
+        Task__c task = new TaskSelector().getRecordById(recordid);
+        delete task;
+        return;
+    }
 }
